@@ -856,7 +856,7 @@ function via_remove_participant($userid, $viaid, $synched = null) {
                 $response = $api->removeuser_activity($via->viaactivityid, $userid);
             } catch (Exception $exception) {
                 if ($exception->getMessage() === 'INVALID_ACTIVITYID') {
-						mtrace(strftime('%c').' '.$exception->getMessage(). ' data : '.$via->viaactivityid);
+                        mtrace(strftime('%c').' '.$exception->getMessage(). ' data : '.$via->viaactivityid);
                 } else {
                     mtrace(strftime('%c').' '.$exception->getMessage().' file '.__FILE__.', line '.__LINE__.', data '.json_encode(array($via, $userid)));
                     throw $exception;
